// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useTableInheritedProps > passes non react-table based props 1`] = `
<DocumentFragment>
  <table
    class="table table-striped"
  >
    <thead>
      <tr>
        <th
          class=""
        >
          <div
            class="d-flex flex-row gap-1"
          />
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class=""
      >
        <td>
          <div
            class="dummy"
          />
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th />
      </tr>
    </tfoot>
  </table>
</DocumentFragment>
`;

exports[`useTableInheritedProps > removes all react-table based props 1`] = `
<DocumentFragment>
  <table
    class="table table-striped"
  >
    <thead>
      <tr>
        <th
          class=""
        >
          <div
            class="d-flex flex-row gap-1"
          />
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class=""
      >
        <td>
          <div />
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th />
      </tr>
    </tfoot>
  </table>
</DocumentFragment>
`;
